[project]
name = "atomic-vault"
version = "0.1.0"
description = "Atomic Knowledge Vault: LLM-as-Architect semantic engine for structured technical notes using LanceDB and FastEmbed"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "rich>=13.0.0",
    "lancedb>=0.4.0",
    "fastembed>=0.2.0",
    "pyyaml>=6.0.0",
    "click>=8.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
av = "av.cli:cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
